# mailmind-ai-email-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260618_0001_create_identity_tables.py  20260619_0002_create_mailbox_tables.py  20260619_0003_create_email_sync_tables.py  20260619_0004_remove_digest_from_sync_jobs.py  20260619_0005_create_digest_ai_tables.py  20260619_0006_create_user_actions.py  20260620_0007_add_ai_run_provider_metadata.py  20260624_0008_add_pending_dispatch_job_statuses.py  (+2 more)
backend/app/: main.py
backend/tests/: test_action_api.py  test_ai_run_service.py  test_auth_api.py  test_auth_service.py  test_background_jobs.py  test_config.py  test_cors.py  test_credential_encryption.py  test_db_connection.py  test_digest_api.py  test_digest_item_actions.py  test_digest_migration.py  test_digest_models.py  test_digest_parser.py  test_digest_prompt.py  test_digest_service.py  test_email_action_audit.py  test_email_api.py  test_email_migration.py  test_email_models.py  test_email_parser.py  test_email_sync_service.py  test_gmail_oauth_api.py  test_gmail_provider.py  test_identity_migration.py  test_identity_models.py  test_imap_auth_api.py  test_imap_provider.py  test_job_api.py  test_llm_provider.py  test_mailbox_api.py  test_mailbox_models.py  test_mailbox_sync_api.py  test_outlook_provider.py  test_redaction.py  test_scheduled_jobs.py  test_session_flow.py  test_user_action_migration.py  test_user_action_models.py  test_user_action_service.py
(+258 files in other folders)
