[project]
name = "mailmind-backend"
version = "0.1.0"
description = "MailMind backend foundation"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "pwdlib[argon2]>=0.2.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
